--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -1,5 +1,7 @@
 - name: Getting Started
+- name: Inbound Messages
+- name: Outbound Messages
 - name: Using InboxCRM
 - name: Working with SugarCRM
 - name: Email Tracking
-- name: Customerization
+- name: Miscellaneous
