--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -1,5 +1,7 @@
 - name: Archive Email
-- name: Outbound Messages
 - name: Email Tracking
+- name: Sync
+- name: Working with Gmail
 - name: Working with SugarCRM
+- name: Setup
 - name: Miscellaneous
