--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ gems:
   - jekyll-assets
   - jekyll-last-modified-at
 exclude: [vendor,Gemfile,Gemfile.lock,Rakefile,readme.md]
-canonical_domain: https://www.wisecashhq.com
+canonical_domain: https://www.yathit.com
 sugarcrm:
   extension_id: iccdnijlhdogaccaiafdpjmbakdcdakk
 assets:
