--- a/build.xml
+++ b/build.xml
@@ -24,6 +24,12 @@
             </exec>
         </sequential>
     </target>
-    <target name="main" depends="build,forum" description="build all">
+    <target name="concat" description="concat js files">
+        <concat destfile="_assets/javascripts/all.js">
+            <filelist dir="_assets/javascripts/" files="jquery-3.2.1.slim.min.js,respond.min.js,garlic.min.js,kb-script.js">
+            </filelist>
+        </concat>
+    </target>
+    <target name="main" depends="concat,build,forum" description="build all">
     </target>
 </project>
