--- a/build.xml
+++ b/build.xml
@@ -26,7 +26,7 @@
     </target>
     <target name="concat" description="concat js files">
         <concat destfile="_assets/javascripts/all.js">
-            <filelist dir="_assets/javascripts/" files="jquery-3.2.1.slim.min.js,respond.min.js,bootstrap.min.js,garlic.min.js,kb-script.js">
+            <filelist dir="_assets/javascripts/" files="jquery-3.2.1.slim.min.js,respond.min.js,bootstrap.min.js,garlic.min.js,kb-script.js,youtube-responsive.js">
             </filelist>
         </concat>
     </target>
