--- a/build.xml
+++ b/build.xml
@@ -6,11 +6,14 @@
         <sequential>
             <copy overwrite="true" force="true"
                   file="${gae.dir}/src/main/webapp/static/sugarcrm-gmail/forum.html"
-                  tofile="${gae.dir}/src/main/resources/xkb/forum.html" />
-            <replace summary="true" file="${gae.dir}/src/main/resources/xkb/forum.html">
+                  tofile="${gae.dir}/src/main/resources/kb/forum.html" />
+            <replace summary="true" file="${gae.dir}/src/main/resources/kb/forum.html">
                 <replacetoken><![CDATA[<p>$CONTENT$</p>]]></replacetoken>
                 <replacevalue><![CDATA[{{CONTENT}}]]></replacevalue>
             </replace>
+            <copy overwrite="true" force="true"
+                  file="${gae.dir}/src/main/resources/kb/forum.html"
+                  tofile="${gae.dir}/src/main/resources/forum/forum.html" />
         </sequential>
     </target>
     <target name="build" description="build site">
